--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 kumoai==2.6.0
-numpy==2.3.2
+numpy==2.1.2
 openai==1.99.9
-pandas==2.2.2
-plotly==6.2.0
-Requests==2.32.4
-streamlit==1.36.0
+pandas==2.2.3
+plotly==5.24.1
+requests==2.32.3
+streamlit==1.38.0
